hphp/hack/test/typecheck/coeffects/rewritten_tparams.php.exp
File "rewritten_tparams.php", line 15, characters 10-11:
Invalid return type (Typing[4110])
  File "rewritten_tparams.php", line 14, characters 26-28:
  Expected `int`
  File "rewritten_tparams.php", line 14, characters 14-15:
  But got `P`
File "rewritten_tparams.php", line 11, characters 3-12:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "rewritten_tparams.php", line 10, characters 2-16:
  From this declaration, the context of this function body provides the capability ctx $f
  File "pseudofunctions.hhi", line 44, characters 12-15:
  But the function being called requires the capability IO
